client/css/scenic.css
@import url(http://fonts.googleapis.com/css?family=Russo+One);

body {
    background: url('/images/shl.png');
}

.logo-font {
    font-family: 'Russo One', sans-serif;
}

#Navbar li.logo a {
   font-size: 25px;
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
   transition: all .2s linear;
}

#Navbar li .at {
    color: #B28FB2;
}

#Navbar li:hover .at, #Navbar li.open .at {
    color: #FCF;
}

.sharp {
    color: #608090;
}

#Navbar li:hover .sharp, #Navbar li.open .sharp {
    color: #89B7CE;
}

#ChatButton.on .on-text { display: none; }
#ChatButton.on .off-text { display: inline; }
#ChatButton.off .on-text { display: inline; }
#ChatButton.off .off-text { display: none; }

#content {
    margin-top:41px;
}

.container {
    padding-top:40px;
}

.center-aligned {
    text-align: center;
}

.left-aligned {
    text-align: left;
}

.logo {
    font-size: 100px;
    color: #222;
}

.logo-desc {
    font-size: 30px;
    margin-top: 20px;
}

.join-channel {
    padding-bottom: 55px;
}

.join-channel input.text {
    height: 50px;
    width: 385px;
    padding-left: 15px;
    font-size: 30px;
    line-height: 50px;
    -webkit-border-radius: 15px 0 0 15px;
    -moz-border-radius: 15px 0 0 15px;
    border-radius: 15px 0 0 15px;
}

.join-channel input.btn.submit {
    -webkit-border-radius: 0 15px 15px 0;
    -moz-border-radius: 0 15px 15px 0;
    border-radius: 0 15px 15px 0;
    height: 60px;
    font-size: 30px;
}

.title {
    margin-top: 50px;
    font-size: 40px;
    color: #999;
    text-shadow: 1px 1px #222;
}

.title.join-channel-title {
    padding-top: 45px;
    font-size: 50px;
    margin-bottom: 20px;
    color: #555;
}

.how-to-use {
    text-align: left;
    margin-left: auto;
    margin-right: auto;
    width: 70%;
}

.how-to-use dt, .how-to-use dd {
    margin-bottom: 10px;
}

.how-to-use dt.last, .how-to-use dd.last {
    margin-bottom: 0px;
}

.copyright {
    font-size: 15px;
    color: #777;
    margin-top: 50px;
}

#Chat {
    position: fixed;
    top: 41px;
    left: 0px;
    background-color: black;
    color: white;
    margin: 0px;
    width: 420px;
    padding: 3px 5px;
    opacity: 0.6;
    filter: alpha(opacity = 60);
}

#Chat:hover {
    opacity: 0.8;
    filter: alpha(opacity = 80);
    cursor: pointer;
}

#Chat.hidden {
    display: none;
}

#Chat .userlist-box {
    margin-bottom: 5px;
    border-bottom: 1px solid #333;
    padding-bottom: 4px;
}

#Chat .userlist-box .nick {
    margin: 0px 2px;
}

#Chat .userlist-box .nick.mine {
}

#Chat .scroll-box {
    position: relative;
    max-height: 500px;
    overflow: hidden;
}

@media(max-height: 799px) {
    #Chat .scroll-box {
        max-height:300px;
    }
}

@media(max-height: 499px) {
    #Chat .scroll-box {
        max-height:100px;
    }
}

#Chat dl {
    width: 100%;
    margin: 0px;
    padding: 0px;
}

#Chat dl dt {
    width: 90px;
    font-weight: bold;
}

#Chat dl dd {
    margin-left: 100px;
    font-weight: normal;
    white-space:pre-wrap;
    white-space:-moz-pre-wrap;
    white-space:-pre-wrap;
    white-space:-o-pre-wrap;
    word-wrap:break-word;
}

#Chat dl .from_me {
    color: #FFCCFF;
}

#Chat .input-box {
    margin-top: 5px;
    border-top: 1px solid #333;
    padding-top: 4px;
    padding-bottom: 3px;
}

#Chat .input-box .nick {
    float: left;
    width: 90px;
    overflow: hidden;
    clear: left;
    text-align: right;
    text-overflow: ellipsis;
    white-space: nowrap;
    font-weight: bold;
}

#Chat .input-box .chat-text-input-wrapper {
    margin-left: 100px;
    height: 20px;
    overflow: hidden;
}
#Chat .input-box .chat-text-input-wrapper input.chat-input {
    margin: 0px;
    padding: 0px;
    border: none;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    border-radius: 0px;
    width: 100%;
    height: 20px;
    line-height: 20px;
    font-size: 14px;
    background-color: transparent;
    color: white;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
    transition: none;
}

@media(max-width: 979px) {
    #Chat {
        top: 51px;
    }

    #content {
        margin-top:-20px;
    }
}

@media(max-width: 767px) {
    #Chat {
        width: 90%;
        left: 5%;
        margin: 0px auto;
        padding: 0px;
    }

    #Chat dl dd {
        margin-left: 10px;
    }

    #Chat .input-box .chat-text-input-wrapper {
        margin-left: 10px;
    }

    #Chat .input-box .nick {
        display: none;
    }
}

.modal input.modal-big-text {
    width: 80%;
    margin: 0px auto;
    display: block;
    height: 40px;
    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
    font-size: 30px;
    line-height: 40px;
    padding-left: 10px;
}

.modal .modal-body .alert {
    width: 80%;
    margin: 15px auto 0px;
}

#fileuploadIframe {
    width: 0px;
    height: 0px;
    border: none;
    margin: 0px;
    padding: 0px;
}

.btn.loading {
    background-image: -webkit-gradient(linear, 0 0, 100% 100%,
        color-stop(.25, rgba(0, 0, 0, .10)),
        color-stop(.25, transparent),
        color-stop(.5, transparent),
        color-stop(.5, rgba(0, 0, 0, .10)),
        color-stop(.75, rgba(0, 0, 0, .10)),
        color-stop(.75, transparent),
        to(transparent));
    background-image:
        -moz-linear-gradient(-45deg,
            rgba(0, 0, 0, .10) 25%,
            transparent 25%,
            transparent 50%, rgba(0, 0, 0, .10) 50%,
            rgba(0, 0, 0, .10) 75%,
            transparent 75%, transparent
        );
    background-size: 50px 50px;
    -moz-background-size: 50px 50px;
    -webkit-background-size: 50px 50px;
    -webkit-animation: animate-stripes 2s linear infinite;
}

@-webkit-keyframes animate-stripes {
    from {
        background-position: 0 0;
    }
    to {
        background-position: -50px 0;
    }
}

.picture-wrapper {
    text-align: center;
}

.picture-wrapper .picture {
    max-width: 100%;
    max-height: 100%;
}

.channel-title {
    margin-top: 100px;
    margin-bottom: 100px;
    font-size: 200px;
    color: #555;
}

.channel-oops {
    padding-top: 50px;
    font-size: 30px;
    color: #444;
}

#ShowPictures {
    position: fixed;
    top: 41px;
    left: 0px;
    width: 100%;
    background: transparent;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7FFFFFFF,endColorstr=#7FFFFFFF);
    zoom: 1;
    background: rgba(255, 255, 255, 0.5);
    z-index: 1000;
    overflow: hidden;
}

@media(max-width: 979px) {
    #ShowPictures {
        top: 51px;
    }
}

@media(max-width: 767px) {
    #ShowPictures {
    }
}

#ShowPictures ul.picture-list {
    margin: 0px auto;
    padding: 0px;
    width: 1200px;
}

@media(max-width: 1249px) {
    #ShowPictures ul.picture-list {
        width: 900px;
    }
}

@media(max-width: 949px) {
    #ShowPictures ul.picture-list {
        width: 600px;
    }
}

@media(max-width: 619px) {
    #ShowPictures ul.picture-list {
        width: 300px;
    }
}

#ShowPictures ul.picture-list li {
    margin: 0px;
    padding: 0px;
    border: none;
    display: block;
    float: left;
    overflow: hidden;
    width: 300px;
    height: 300px;
    opacity: 0.85;
    filter: alpha(opacity = 85);
}

#ShowPictures ul.picture-list li:hover {
    cursor: pointer;
    opacity: 1;
    filter: alpha(opacity = 100);
}

#ShowPictures ul.picture-list li img {
    margin: 0px;
    padding: 0px;
    border: none;
    max-width: none;
    max-height: none;
}

#DragAndDropStatusBar {
    position: fixed;
    height: 35px;
    bottom: -35px;
    background-color: black;
    color: white;
    -webkit-transition: all .2s linear;
    -moz-transition: all .2s linear;
    transition: all .2s linear;
    width: 100%;
    text-align: center;
    line-height: 35px;
    opacity: 0.8;
    font-size: 20px;
    font-weight: 200;
}

#DragAndDropStatusBar.uploading .dragover-text {
    display: none;
}

#DragAndDropStatusBar .uploading-text {
    display: none;
    background-image: -webkit-gradient(linear, 0 0, 100% 100%,
        color-stop(.25, rgba(255, 255, 255, .10)),
        color-stop(.25, transparent),
        color-stop(.5, transparent),
        color-stop(.5, rgba(255, 255, 255, .10)),
        color-stop(.75, rgba(255, 255, 255, .10)),
        color-stop(.75, transparent),
        to(transparent));
    background-image:
        -moz-linear-gradient(-45deg,
            rgba(255, 255, 255, .10) 25%,
            transparent 25%,
            transparent 50%, rgba(255, 255, 255, .10) 50%,
            rgba(255, 255, 255, .10) 75%,
            transparent 75%, transparent
        );
    background-size: 50px 50px;
    -moz-background-size: 50px 50px;
    -webkit-background-size: 50px 50px;
    -webkit-animation: animate-stripes 2s linear infinite;
}

#DragAndDropStatusBar.uploading .uploading-text {
    display: block;
}

